[tool.poetry]
name = "parquet"
version = "0.1.0"
description = ""
authors = ["Vivek Alamuri <61337145+valamuri2020@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
